fix: hide API key, style: change search form input and button styles, update full page resolution to remove white space, feat: create basic article for development and start creating a news card component

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,11 +6,10 @@ a {
 
 .page {
   font-family: "Roboto", Georgia, "Times New Roman", Times, serif;
-  background-color: tan;
 }
 
 .page__content {
-  max-width: 1440px;
+  max-width: 2560px;
   width: 100%;
   min-height: 100vh;
   margin: 0 auto;
@@ -20,7 +19,7 @@ a {
 }
 
 .page__background {
-  background: url(../../assets/phone-background-min.jpg) no-repeat;
+  background: url(../../assets/phone-background-min.jpg) center no-repeat;
   background-size: cover;
   flex: 1 0 auto;
 }
